@@ -181,7 +181,7 @@ bool RenderBox_isTableCell (RenderBox *this)
 void
 testTortureExecute (void)
 {
-#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && (__GNUC__ < 5))
+#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && (__GNUC__ < 5)) && !defined (__SDCC_stm8)
   g_this.m_relPositioned = false;
   g_this.m_positioned = false;
   g_this.m_floating = false;
