@@ -1,3 +1,10 @@
+2013-09-03 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Implement assertion for linker bug #2198 so it is no longer silent to the user.
+	* support/regression/tests/gcc-torture-execute-20030714-1.c:
+	  Disable failing test.
+
 2013-09-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
